made some changes

--- a/referral.html
+++ b/referral.html
@@ -60,7 +60,7 @@
                 <p>While helping people actualize their goals and scale successfully through the digital world, we also provide some interesting rewards which includes our referral benefits and bonuses both for registered members and non-registered members.</p>
                 <br>
                 <h2>Referral Package</h2>
-                <p>When a person registers under you either using your referral Id or in person, you get earn 10% of the persons payment fee and the money will be paid to your provided account details.</p>
+                <p>When a person registers under you either using your referral Id or in person, you earn 10% of the persons payment fee and the money will be paid to your provided account details.</p>
                 <br>
                 <h2>Referral Methods</h2>
                 <article>
