fixed some errors

--- a/index.html
+++ b/index.html
@@ -462,10 +462,10 @@
         </div>
         <hr>
         <p>Copyright &copy; 2023 GITechnologies</p>
-        <a href="https://wa.me/08100493357?text=Hello, Good day, I'm Interested in learning Web Development" target="_blank" class="whatsapp-div">
+        <button class="whatsapp-div">
             <span>Chat with us</span>
            <img src="assets//img/whatsapp.png" alt="" class="whatsapp-img">
-        </a>
+        </buttonget=>
     </footer>
 
 
