--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
         </div>
         <hr>
         <p>Copyright &copy; 2023 GITechnologies</p>
-        <a href="https://wa.me/+2348100493357?text=Hello, Good day, I'm Interested in learning Web Development" class="whatsapp-div">
+        <a href="https://wa.me/+2348100493357" class="whatsapp-div">
             <span>Chat with us</span>
            <img src="assets//img/whatsapp.png" alt="" class="whatsapp-img">
         </a>
